--- a/.github/workflows/03_sacloud_apprun_actions.yml
+++ b/.github/workflows/03_sacloud_apprun_actions.yml
@@ -1,7 +1,10 @@
 name: 03 Sacloud Apprun Actions
 
 on:
-  workflow_dispatch:
+  #workflow_dispatch:
+  push:
+    branches:
+      - master
 
 jobs:
   deploy:
